2003-04-13  Alif Wahid	<awah005@users.sourceforge.net>

	* setup.py.in
	* setup.py: Extra predicate added to ensure that MSVC compatible
	flags are only used when actually using the GCC compiler.

2003-04-13  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* setup.py.in: Changed 'gcc --version' to 'gcc -dumpversion'.

	* examples/low-level.py: Don't import gtk.gtkgl module.

	* gtk/gdkgl/gdkglmodule.c (init_gdkgl): Initialize GdkGLExt
	library. Added version information.

2003-04-13  Alif Wahid	<awah005@users.sourceforge.net>

	Win32 build fix to take account of GCC version to
	provide proper MSVC compatible struct packing.

	* setup.py.in
	* setup.py

2003-04-12  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* dsextras.py:
	* setup.py.in: Win32 build fix.

2003-04-04  Alif Wahid	<awah005@users.sourceforge.net>

	Fixed bug in the font.py example program, however
	it won't be apparent yet. This is because we're waiting
	for PyGtk to conform to the default parameter conventions
	in the Pango API. Once PyGtk has, then some part of
	the code will be activated manually. So for now it's
	fixed in the background only.

2003-03-30  Alif Wahid	<awah005@users.sourceforge.net>

	Added new example programs. Another set of straight
	conversion from C to Python based on Naofumi's programs
	from GtkGLExt in C.

	* examples/simple.py
	* examples/simple-mixed.py: Tests the mixing of GDK and
	OpenGL calls using a DrawingArea widget.

2003-03-30  Alif Wahid	<awah005@users.sourceforge.net>

	Added example program. Another straight conversion from
	C to Python based on Naofumi's program in C.

	* examples/pixmap-mixed.py: Tests the mixing of GDK and
	OpenGL calls using a GdkPixmap.

2003-03-22  Alif Wahid	<awah005@users.sourceforge.net>

	Added some basic instruction for building using
	python and distutil on Win32 platforms. See the
	WIN32_BUILD file.

2003-03-22  Alif Wahid	<awah005@users.sourceforge.net>

	Added new example programs. These are a mappings of the